--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ table {
 
 .flex-container {
   display: flex;
-  justify-content: space-between;
   margin: 30px auto;
   padding: 20px;
   max-width: 1000px;
@@ -132,13 +131,11 @@ table {
   text-transform: capitalize;
 }
   
-html, body {
-  overflow-x: hidden;
-  box-sizing: border-box;
-} 
 
 
-@media screen and (max-width: 900px) {
+
+
+@media screen and (max-width: 300px) {
   .flex-container {
     flex-direction: column; 
     align-items: stretch;   
@@ -148,10 +145,7 @@ html, body {
   .main-content, .sidebar {
     width: 100%;            
     max-width: 100%;        
-    margin: 0 auto;         
-    padding: 15px;
-    background-color:FFDD4;
-    box-sizing: border-box; 
+
   }
 }
 .sidebar img {
@@ -160,7 +154,7 @@ html, body {
   display: block;
   margin: 0 auto;
 }
-}
+
 
   nav a {
     display: inline-block;
@@ -171,14 +165,19 @@ html, body {
   header {
     font-size: 20px;
   }
-}
+  html, body {
+  background-color: cornsilk ;
+  overflow-x: hidden;
+  box-sizing: border-box;
+} 
+
 
 
 @media screen and (max-width: 600px) {
   header {
     font-size: 18px;
     padding: 15px;
-    background-color: #439946;
+    background-color: #f5f5f5;
   }
 
   nav {
@@ -206,21 +205,23 @@ html, body {
     padding: 6px;
   }
 footer {
-    font-size: 14px;
+    font-size: 7 px;
     text-align: center;
     padding: 10px;
+    font-family: Arial ;
   }
   
 TBtable {
   border: 5px solid black;
       
 }
-Weightsphoto{
-  Width: 400px
+
+
+
 
 }
 
-}
+
 
 
 
